--- a/epoxy_depot/src/App.css
+++ b/epoxy_depot/src/App.css
@@ -1,10 +1,14 @@
 .App {
   text-align: center;
-}
+  /* background-image: url('Assets/glo-epoxy-table.png'); */
+  background-size:100% 100%;
+  height:100vh;
+  display:flex;
+  align-items: center;
+  justify-content:center;
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+  
+
 }
 
 @media (prefers-reduced-motion: no-preference) {
@@ -35,4 +39,38 @@
   to {
     transform: rotate(360deg);
   }
+}
+
+.form{
+  box-shadow: 0 1px 2px rgba(0,0,0,0.07), 
+  0 2px 4px rgba(0,0,0,0.07), 
+  0 4px 8px rgba(0,0,0,0.07), 
+  0 8px 16px rgba(0,0,0,0.07),
+  0 16px 32px rgba(0,0,0,0.07), 
+  0 32px 64px rgba(0,0,0,0.07);
+
+  
+  
+}
+
+.cards{
+  box-shadow: 0 1px 1px rgba(63, 174, 254,.3), 
+  0 2px 2px rgba(63, 174, 254,.3), 
+  0 4px 4px rgba(63, 174, 254,.3), 
+  0 8px 8px rgba(63, 174, 254,.3);
+}
+
+.cards:hover{
+  transform: scale(1.05); 
+  transition: all .5s 0s ease;
+}
+
+.button{
+  background: #004AAC!important;
+  border:none!important;
+  box-shadow: 0 1px 1px rgba(0,0,0,0.2), 
+  0 2px 2px rgba(0,0,0,0.2), 
+  0 4px 4px rgba(0,0,0,0.2), 
+  0 8px 8px rgba(0,0,0,0.2),
+  0 16px 16px rgba(0,0,0,0.2);
 }
